Introduce ImmutableList type
This lets the type system, and people reading the code, immediately
understand that the given list is guaranteed to be immutable.